--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.8",
   "description": "TuneFree - 音遇自由",
   "main": "./out/main/index.js",
-  "author": "是青旨啊",
+  "author": "by是青旨啊",
   "home": "https://csm.sayqz.com",
   "github": "https://github.com/GSQZ",
   "license": "AGPL-3.0",
